# termsnap

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  default.nix  flake.nix  release-plz.toml
.github/workflows/: ci.yml
scripts/: example.py  examples.sh  inputrc
src/: main.rs  poll.rs  ringbuffer.rs  tests.rs
termsnap-lib/: Cargo.toml  README.md
termsnap-lib/src/: ansi.rs  colors.rs  lib.rs
termsnap-lib/src/tests/: ls.txt
