[package]
name = "termsnap"
version = "0.1.0"
edition = "2021"
description = "Create SVGs from terminal output"
keywords = ["terminal", "screenshot", "ansi", "svg", "vector-graphics"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tomcur/termsnap"

[workspace]
members = [
  "termsnap-lib",
]

[workspace.dependencies]
alacritty_terminal = "0.24"

[dependencies]
alacritty_terminal = { workspace = true }
arrayvec = "0.7.4"
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
rustix = { version = "0.38.34", features = ["event", "fs", "termios"] }
signal-hook = "0.3.17"

termsnap-lib = { path = "./termsnap-lib", version = "0.1.0" }
