[package]
name = "termsnap"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Create SVGs from terminal output"
keywords = ["terminal", "screenshot", "ansi", "svg", "vector-graphics"]
readme = "README.md"
repository = "https://github.com/tomcur/termsnap"

[workspace]
members = [
  "termsnap-lib",
]

[workspace.package]
version = "0.5.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
alacritty_terminal = "0.24.1"

[dependencies]
alacritty_terminal = { workspace = true }
anyhow = "1.0.86"
arrayvec = "0.7.4"
clap = { version = "4.5.7", features = ["derive"] }
rustix = { version = "0.38.34", features = ["event", "fs", "termios"] }
signal-hook = "0.3.17"

termsnap-lib = { path = "./termsnap-lib", version = "0.5.0" }
