[package]
name = "termsnap-lib"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Create SVGs from terminal output"
keywords = ["terminal", "screenshot", "ansi", "svg", "vector-graphics"]
readme = "README.md"
repository = "https://github.com/tomcur/termsnap"

[dependencies]
alacritty_terminal = { workspace = true }
